--- a/app/build.gradle
+++ b/app/build.gradle
@@ -74,4 +74,6 @@ dependencies {
 
   implementation "androidx.viewpager2:viewpager2:1.0.0"
 
+  implementation 'com.google.android.play:core:1.7.2'
+
 }
